GitHub does not have basic java functions
The original code compiles on my machine. I'm just fighting with GitHub actions at this point.